--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -68,6 +68,7 @@
   <style>
     .auth-page {
       min-height: calc(100vh - 76px);
+      margin-bottom: 6rem;
       display: flex;
       align-items: center;
       justify-content: center;
